replaced hibernate-core to DataJPA and Some dependensies are added